# algo

./: .gitignore  README.md  improve.ipynb  install_miniconda.sh  nomatter.ipynb  process_image_urls.py  pyproject.toml  test.py  vup_data_mining_final.ipynb  vup_data_mining_roc.ipynb  vup_data_mining_ultimate.ipynb  文献.xlsx  文献分析.ipynb
LeetCode/: 13.罗马数字转整数.py  20.有效的括号.py  21.合并两个有序链表.py  3185.构成整天的下标对数目 II.py
LeetCode/.lcpr_data/: bricks.json
basic_strct/: ArrayQueue.py  ArrayStack.py  Bubble_sort.py  DoubleQueue.py  Hash.py  HashTable.py  Insertion_sort.py  Merge_sort.py  Node.py  Selection_sort.py  Shell_sort.py  UnordredList.py  convert.py  dynamicarray.py  potato.py  sequential_search.py  test.txt
class_test/: Iterator.py  add_abc.py  class_test.py  digui.py  error.py  generator.py  random_words.py  range.py  tanxin.py  test_name.py  test_name1.py  tqdm_test.py
class_test/some/: caesar_cipher.py  game_judge.py  hanta.py  html_match.py  tanxin.py  有效括号.py
class_work/: Data Cleaning Contest Task.xlsx  ana.ipynb  cleaned_pmid_country.csv  country.xlsx  log2_int.py  max_min.py
codes/03/: credit_card.py  init_credit_card.py  point.py  point_plus.py  predatory_credit_card.py  range.py  scale.py  sequence.py  sequence_iterator.py  super_case.py  test.py  vector.py
codes/04/: anagram_solution1.py  anagram_solution2.py  anagram_solution4.py  constant1.py  constant2.py  factorial.py  func_plot.py  linear.py  list_funcs.py  logarithm.py  logarithm_linear.py  power1.py  sort_detect.py  square.py  try1.py  (+5 more)
datamin/: Test.ipynb  test.py  vup_data_mining_roc.ipynb
(+57 files in other folders)
