[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bangwu", email = "i@bangwu.top" }
]
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "pip>=25.0.1",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "openai>=1.66.5",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "bcrypt>=4.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/algo"]
